--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@
 }
 html {
     font-size: 62.5%;
-    font-family: Helvetica, sans-serif;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
     --violeta: #1E0146;
@@ -237,7 +237,7 @@ footer {
   background: rgb(30,1,70);
   background: linear-gradient(90deg, rgba(30,1,70,1) 0%, rgba(182,0,117,1) 77%);
   width: 100%;
-  height:520px;
+  height:530px;
   margin-top: 30px;
   padding: 60px 250px 60px 250px;
   display: block;
@@ -307,7 +307,13 @@ footer button{
   padding: 8px  25px 10px;
   color: var(--violeta);
 }
-
+ footer .allRights {
+  font-size: 1.2rem;
+  color:rgb(167, 165, 165);
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 5px;
+}
 /*   PANTALLA PLANES CARDS 
 
 #correo {
