--- a/style1.css
+++ b/style1.css
@@ -28,6 +28,7 @@ html {
     position: fixed;
     width: 100%;
     height: 85px;
+    z-index: 2;
  }
 .nav li {
     font-size: 1.7rem;
@@ -41,8 +42,8 @@ html {
 .logo {
  width: 195px;
  padding: 0px;
- 
 }
+
 .ingresar {
   border-radius: 30px;
   background-color: var(--rosa);
@@ -124,15 +125,17 @@ h3 {
  align-content: center;
  width: 100%;
  padding: 30px 300px 30px 300px;
+ display: inherit;
  
 }
 .cards {
 display: grid;
 box-shadow: 15px 15px 45px 3px rgba(133, 133, 133, 1);
-height: 320px;
+height: 370px;
 width: 200px;
 text-align: center;
-padding: 10px;
+padding:10px;
+margin: 0 auto;
 }
 .cards hr {
    background-color: #1E0146;
@@ -176,7 +179,7 @@ button {
   color: var(--violeta);
   
 }
-button :hover {
+button:hover {
   background: rgb(30,1,70);
   color:#F9CBD1; 
   border-radius: 30px;
@@ -199,8 +202,7 @@ button:active {
   column-gap: 10px;
   row-gap: 10px;
   width: 1030px;
-  justify-self: center;
- 
+  justify-self: center;  
   padding: 100px , 0px;
   align-content: center;
   align-items: center;
@@ -281,7 +283,7 @@ footer p {
   color:#ffffff;
   text-align: center;
 }
-footer button :hover {
+footer button:hover {
   background: rgb(30,1,70);
   color:#F9CBD1; 
   border-radius: 30px;
@@ -314,21 +316,55 @@ footer button{
   margin-bottom: 0px;
   padding: 5px;
 }
-/*   PANTALLA PLANES CARDS 
+                       /**** animacion*/
+                       
+                           /*media*/
 
-#correo {
- padding: 10px;
-  width: 300px;
-}
-#nombre {
-  margin-right: 30px;
-  padding: 10px;
-  width: 300px;
+@media (max-width: 812px) {
+ 
+  .grid-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        column-gap: 10px;
+        row-gap: 10px;
+        width: 570px;
+        justify-self: center;         
+        align-content: center;
+        align-items: center;
+        margin-bottom: 30px;
+    }                    
+  .grid-container img {
+      width: 280px;
+      height: 280px;
+    }
+   footer {
+      padding: 60px 206px 60px 206px;
+    }
+  .planes {
+     padding: 30px 209px 30px 209px;
+      width: 812px;
+  }
+  .nav li {
+     font-size: 1.4rem;
+     margin: 8px;
+     padding: 0px 13px;
+     display: inline-block;
+     justify-self: center;
+     text-decoration: none;
+}     
+  .logo {
+     width: 160px;
+     padding: 0px;
+  }                     
+  .div.home {
+     background: url(/proyecto-m-dulo1/imagenes/fondo\ HOME.png);
+     height: 1300px;     
+     background-position: top;
+     text-align: center;
+     background-size: auto;
+     padding-top: 100px;
+  
 }
 
-select {
-   padding: 10px;
-  width: 500px;
 
 }
- */
